@@ -1,3 +1,8 @@
+*gitlab-pages-0.4.3 (17 Jun 2017)
+
+  17 Jun 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-pages-0.4.3.ebuild:
+  www-servers/gitlab-pages:  Add version 0.4.3
+
 *gitlab-pages-0.4.0 (13 Mar 2017)
 
   13 Mar 2017; Manuel Friedli <manuel@fritteli.ch>
